[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "webdriver-manager>=4.0.0",
    "cffi>=1.15.0",
]
